stop overflow-x

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,6 +34,11 @@ body {
   min-height: 100vh;
   background-color: #fffefa;
   width: 100%;
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 * {
